--- a/QuizMahasiswa/QuizMahasiswa.csproj
+++ b/QuizMahasiswa/QuizMahasiswa.csproj
@@ -73,6 +73,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportBarang004.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReportBarang004.Designer.cs">
+      <DependentUpon>ReportBarang004.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MasterBarang024.resx">
       <DependentUpon>MasterBarang024.cs</DependentUpon>
     </EmbeddedResource>
@@ -85,6 +91,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ReportBarang004.resx">
+      <DependentUpon>ReportBarang004.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="BarangDataSet.xsc">
       <DependentUpon>BarangDataSet.xsd</DependentUpon>
     </None>
